# ValkyrieEngine

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: cmake.yml
include/valkyrie_engine/: artefact_collection.hpp  basic_event_listener.hpp  basic_lockable.hpp  basic_pipeline.hpp  basic_pipeline_artefact.hpp  basic_pipeline_stage.hpp  basic_resource.hpp  basic_resource_repository.hpp  engine_instance.hpp  pipeline.hpp  resource_repository.hpp  util.hpp  valkyrie_engine.hpp
src/: ValkyrieEngine.cpp  engine_instance.cpp  pipeline.cpp
test/: CMakeLists.txt  basic_lockable_000.cpp  resource_repository.hpp  resource_repository_000.cpp  resource_repository_001.cpp  resource_repository_002.cpp  resource_repository_003.cpp  test.cpp
